# robust_iterator

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  gtest.cmake
include/: component.h  composite_iterator.h  data.h  group.h  group_iterator.h  iterator.h  list.h  list_iterator.h  node.h  null_iterator.h  robust_iterator.h
src/: robust_iterator.h  robust_iterator_test.cpp
test/: robust_iterator_test.cpp
